# pinchtab-cloud

./: .dockerignore  .env.example  .gitignore  Dockerfile  agent.py  config.example.yaml  docker-compose.yml  pyproject.toml  requirements.txt  tools.py
backend/: agent_runner.py  auth.py  billing.py  config.py  db.py  denylist.py  llm_cli.py  main.py  models.py  pinchtab_client.py  profiles.py  rate_limit.py  security.py  task_bus.py  task_input.py  tasks.py
backend/static/: index.html
core/: prompts.py
dev/: start.sh
tests/: conftest.py  test_agent_runner.py  test_denylist.py  test_llm_cli.py  test_pinchtab_client.py  test_profiles_endpoint.py  test_task_bus.py  test_task_input.py  test_task_state_machine.py  test_tasks_endpoint.py
